Fix missing dependency jar https://github.com/sematext/solr-autocomplete/issues/1

--- a/pom.xml
+++ b/pom.xml
@@ -178,4 +178,10 @@
     </dependency>
   </dependencies>
 
+  <repositories>
+    <repository>
+      <id>java.net</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
+  </repositories>
 </project>
