--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <name>AutoComplete</name>
   <version>1.6.6.3.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <description />
+  <description>Solr component for implementing suggest-as-you-type and auto-complete functionality</description>
   <url>http://sematext.com/open-source/index.html</url>
 
   <licenses>
@@ -23,10 +23,20 @@
     <url>http://sematext.com</url>
   </organization>
 
+  <developers>
+    <developer>
+      <id>nmtien</id>
+      <name>Tien Nguyen Manh</name>
+      <email>tien.nguyenmanh@sematext.com</email>
+      <organization>Sematext</organization>
+    </developer>
+  </developers>
+
   <scm>
     <connection>scm:git:git@github.com:sematext/solr-autocomplete.git</connection>
     <developerConnection>scm:git:git@github.com:sematext/solr-autocomplete.git</developerConnection>
     <url>https://github.com/sematext/solr-autocomplete</url>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
@@ -43,8 +53,8 @@
     <maven.compile.target>1.8</maven.compile.target>
     <junit.version>4.12</junit.version>
     <solr.version>6.3.0</solr.version>
-    <querysegmenter.version>1.3.6.3.0-SNAPSHOT</querysegmenter.version>
-    <researcher.version>1.12.6.3.0-SNAPSHOT</researcher.version>
+    <querysegmenter.version>1.3.6.3.0</querysegmenter.version>
+    <researcher.version>1.12.6.3.0</researcher.version>
   </properties>
 
   <build>
@@ -103,6 +113,20 @@
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
