--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.sematext.autocomplete</groupId>
   <artifactId>st-AutoComplete</artifactId>
   <name>AutoComplete</name>
-  <version>1.6.6.3.1-SNAPSHOT</version>
+  <version>1.6.6.5.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Solr component for implementing suggest-as-you-type and auto-complete functionality</description>
   <url>http://sematext.com/open-source/index.html</url>
@@ -51,9 +51,9 @@
     <maven.compile.source>1.8</maven.compile.source>
     <maven.compile.target>1.8</maven.compile.target>
     <junit.version>4.12</junit.version>
-    <solr.version>6.3.0</solr.version>
-    <querysegmenter.version>1.3.6.3.0</querysegmenter.version>
-    <researcher.version>1.12.6.3.0</researcher.version>
+    <solr.version>6.5.1</solr.version>
+    <querysegmenter.version>1.3.6.5.1-SNAPSHOT</querysegmenter.version>
+    <researcher.version>1.12.6.5.1-SNAPSHOT</researcher.version>
   </properties>
 
   <build>
