--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
     <maven.compile.target>1.8</maven.compile.target>
     <junit.version>4.12</junit.version>
     <solr.version>6.5.1</solr.version>
-    <querysegmenter.version>1.3.6.5.1-SNAPSHOT</querysegmenter.version>
-    <researcher.version>1.12.6.5.1-SNAPSHOT</researcher.version>
+    <querysegmenter.version>1.3.6.5.1</querysegmenter.version>
+    <researcher.version>1.12.6.5.1</researcher.version>
   </properties>
 
   <build>
