--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.sematext.autocomplete</groupId>
   <artifactId>st-AutoComplete</artifactId>
   <name>AutoComplete</name>
-  <version>1.6.6.5.2-SNAPSHOT</version>
+  <version>1.6.7.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Solr component for implementing suggest-as-you-type and auto-complete functionality</description>
   <url>http://sematext.com/open-source/index.html</url>
@@ -51,9 +51,9 @@
     <maven.compile.source>1.8</maven.compile.source>
     <maven.compile.target>1.8</maven.compile.target>
     <junit.version>4.12</junit.version>
-    <solr.version>6.5.1</solr.version>
-    <querysegmenter.version>1.3.6.5.1</querysegmenter.version>
-    <researcher.version>1.12.6.5.1</researcher.version>
+    <solr.version>7.1.0</solr.version>
+    <querysegmenter.version>1.3.7.1.0-SNAPSHOT</querysegmenter.version>
+    <researcher.version>1.12.7.1.0-SNAPSHOT</researcher.version>
   </properties>
 
   <build>
@@ -61,7 +61,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.2</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
@@ -76,7 +76,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -89,7 +89,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
+        <version>2.10.4</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -170,7 +170,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>2.4</version>
+      <version>2.5</version>
     </dependency>
 
     <dependency>
@@ -202,7 +202,7 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20160807</version>
+      <version>20170516</version>
     </dependency>
   </dependencies>
 
