--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
     <maven.compile.target>1.8</maven.compile.target>
     <junit.version>4.12</junit.version>
     <solr.version>7.1.0</solr.version>
-    <querysegmenter.version>1.3.7.1.0-SNAPSHOT</querysegmenter.version>
-    <researcher.version>1.12.7.1.0-SNAPSHOT</researcher.version>
+    <querysegmenter.version>1.3.7.1.0</querysegmenter.version>
+    <researcher.version>1.12.7.1.0</researcher.version>
   </properties>
 
   <build>
